cabal-version:      2.4
name:               n2t-hs
version:            0.1.0.0
synopsis:           nand2tetris in Haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             S Takumi
maintainer:         takumi.shiratori@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib, Assembler

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable n2t-hs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0,
        filepath,
        n2t-hs

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite n2t-hs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.1.0
